<resources>
    <string name="app_name">EBM</string>



    <string name="hint_email">Email</string>

    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>

    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_save">SAVE</string>
    <string name="btn_update">UPDATE</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="btn_event">Events</string>
    <string name="btn_members">Members</string>
    <string name="btn_funds">Funds</string>
    <string name="hint_ntid">Ntid </string>
    <string name="hint_mname">Name </string>
    <string name="hint_phone">Phone </string>


</resources>
